Update enroll page

--- a/enroll.html
+++ b/enroll.html
@@ -22,139 +22,34 @@ layout: default
                 <h2>Enroll Your Child</h2>
                 <div class='row-fluid'>
                     <div class='span12'>
-                        <p>Completing this form is the first step in enrolling your child at Prodeo Academy, a tuition-free public preparatory school located in Minneapolis, MN.</p>
-                        <p><i>Please complete a separate form for each child you are interested in enrolling in Prodeo Academy.</i></p>
-                        <p><a href="/assets/prodeo_enrollment_handout.pdf" target="_blank">Click here for more information about enrolling your child at Prodeo Academy.</a></p>
-                        <form class="form-horizontal" id="enroll">
-                            <h3>Child Information</h3>
-                            <div class="form-group">
-                                <label for="name" class="control-label">Full Name</label>
-                                <div class="controls">
-                                    <input type="text" id="name" name="name" class="form-control" placeholder="First and Last" required>
-                                </div>
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <label for="dob" class="control-label">Date of Birth</label>
-                                <div class="controls">
-                                    <input type="text" id="dob" name="dob" class="form-control" placeholder="Month / Day / Year" required>
-                                </div>
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <label class="control-label">School Year Entering Prodeo Academy</label>
-                                <div class="controls">
-                                    <label class="radio">
-                                        <input type="radio" name="year" value="2017-18" checked> 2017-18
-                                    </label>
-                                    <label class="radio">
-                                        <input type="radio" name="year" value="2018-19"> 2018-19
-                                    </label>
-                                </div>
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <label class="control-label">Grade Level in<br>Entry Year</label>
-                                <div class="controls">
-                                    <label class="radio">
-                                        <input type="radio" name="grade" value="Kindergaten" checked> Kindergarten
-                                    </label>
-                                    <label class="radio">
-                                        <input type="radio" name="grade" value="Grade 1"> Grade 1
-                                    </label>
-                                    <label class="radio">
-                                        <input type="radio" name="grade" value="Grade 2"> Grade 2
-                                    </label>
-                                    <label class="radio">
-                                        <input type="radio" name="grade" value="Grade 3"> Grade 3
-                                    </label>
-                                    <label class="radio">
-                                        <input type="radio" name="grade" value="Grade 4"> Grade 4
-                                    </label>
-                                    <label class="radio">
-                                        <input type="radio" name="grade" value="Grade 5"> Grade 5 (will be available for the 2018-19 school year)
-                                    </label>
-                                </div>
-                            </div>
+                        <p class="lead">Two Easy Ways to Apply:</p>
+                        <ol>
+                            <li>Complete an “online application” by clicking on this link: <a href="https://prodeoacademy.schoolmint.net" target="blank">prodeoacademy.schoolmint.net</a></li>
+                            <li>Drop by our Minneapolis office to fill out an application:
+                            <br>620 Olson Memorial
+                            <br>Highway Minneapolis, MN 55411</li>
+                        </ol>
+                    </div>
+                </div>
+                <h3>Visit our Schools</h3>
+                <div class='row-fluid'>
+                    <div class='span12'>
+                        <p>We offer parents and students opportunities to visit our schools at their convenience. Please contact Lahens St. Fleur at 763-205- 9950 or email: <a href="mailto:lahensstfleur@prodeoacademy.org">lahensstfleur@prodeoacademy.org</a></p>
+                        <p>
+                        <b>Minneapolis Campus</b>
+                        <br>
+                        620 Olson Memorial Highway
+                        <br>
+                        Minneapolis, MN 55411
+                        </p>
 
-                            <h3>Parent / Guardian #1 Information</h3>
-                            <div class="form-group">
-                                <label for="address1" class="control-label">Address</label>
-                                <div class="controls">
-                                    <input type="text" id="address1" name="address1" class="form-control" required>
-                                </div>
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <label for="phone1" class="control-label">Phone</label>
-                                <div class="controls">
-                                    <input type="text" id="phone1" name="phone1" class="form-control" required>
-                                </div>
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <label for="email1" class="control-label">Email</label>
-                                <div class="controls">
-                                    <input type="text" id="email1" name="email1" class="form-control">
-                                </div>
-                            </div>
-
-                            <h3>Parent / Guardian #2 Information</h3>
-                            <div class="form-group">
-                                <label for="address2" class="control-label">Address</label>
-                                <div class="controls">
-                                    <input type="text" id="address2" name="address2" class="form-control">
-                                </div>
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <label for="phone2" class="control-label">Phone</label>
-                                <div class="controls">
-                                    <input type="text" id="phone2" name="phone2" class="form-control">
-                                </div>
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <label for="email2" class="control-label">Email</label>
-                                <div class="controls">
-                                    <input type="text" id="email2" name="email2" class="form-control">
-                                </div>
-                            </div>
-
-                            <h4>Submit</h4>
-
-                            <div class="form-group">
-                                <label for="from" class="control-label">How did you hear about Prodeo Academy?</label>
-                                <div class="controls">
-                                    <select id="from" name="from" required>
-                                        <option></option>
-                                        <option>Word of mouth (student, parent, etc.)</option>
-                                        <option>Daycare or Preschool provider</option>
-                                        <option>Prodeo Academy website</option>
-                                        <option>Prodeo Academy flyer or mailer</option>
-                                        <option>Prodeo Academy staff member</option>
-                                        <option>Other</option>
-                                    </select>
-                                </div>
-                            </div>
-
-                            <br>
-                            <br>
-                            <br>
-
-                            <div class="alert alert-danger" style="display:none">
-                                <span>Please fill out all the required fields before submitting.</span>
-                            </div>
-
-                            <div class="form-group">
-                                <div class="controls">
-                                    <button type="submit" class="btn btn-default">Submit Application</button>
-                                </div>
-                            </div>
-
-
-                            <br>
-                        </form>
+                        <p>
+                        <b>St. Paul Campus</b>
+                        <br>
+                        170 Rose Avenue West
+                        <br>
+                        St. Paul, MN 55117</p>
+                        </ol>
                     </div>
                 </div>
             </div>
