Update work at prodeo page

--- a/get_involved/work_at_prodeo.html
+++ b/get_involved/work_at_prodeo.html
@@ -15,43 +15,117 @@ layout: default
                 <h2>Work at Prodeo</h2>
                 <p class='lead'>Thank you for your interest in working at Prodeo Academy!</p>
                 <p>We are currently hiring for the following roles:</p>
-                <ul>
-                    <li>
-                        <a href='/assets/jobs/educational_associate.pdf' target='blank'>Educational Associate</a>
-                    </li>
-                    <li>
-                        <a href='/assets/jobs/student_teacher.pdf' target='blank'>Student Teacher</a>
-                    </li>
-                    <li>
-                        <a href='/assets/jobs/special_education_teacher.pdf' target='blank'>Special Education Teacher</a>
-                    </li>
-                    <li>
-                        <a href='/assets/jobs/classroom_teacher.pdf' target='blank'>Classroom Teacher</a>
-                    </li>
-                    <li>
-                        <a href='/assets/jobs/intern.pdf' target='blank'>Intern</a>
-                    </li>
-                </ul>
-                <br>
-                <p>If you are interested in applying, please fill out our application.</p>
-                <ul>
-                    <li>
-                        <a href='/assets/apply/educational-assistant-application.pdf' target='blank'>Educational Associate</a>
-                    </li>
-                    <li>
-                        <a href='/assets/apply/general-application.pdf' target='blank'>Student Teacher</a>
-                    </li>
-                    <li>
-                        <a href='/assets/apply/general-application.pdf' target='blank'>Special Education Teacher</a>
-                    </li>
-                    <li>
-                        <a href='/assets/apply/general-application.pdf' target='blank'>Classroom Teacher</a>
-                    </li>
-                    <li>
-                        <a href='/assets/apply/general-application.pdf' target='blank'>Intern</a>
-                    </li>
-                </ul>
-                <br>
+                <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">Campus</th>
+                        <th scope="col">Job Title and Description</th>
+                        <th scope="col">Apply</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Minneapolis</td>
+                        <td><a href='/assets/work/principal.pdf' target='blank'>Principal PK-2</a></td>
+                        <td><a href='/assets/work/leadership_application.pdf' target='blank'>Apply now</a></td>
+                    </tr>
+                    <tr>
+                        <td>Minneapolis</td>
+                        <td><a href='/assets/work/academic_dean.pdf' target='blank'>Academic Dean PK-2</a></td>
+                        <td><a href='/assets/work/leadership_application.pdf' target='blank'>Apply now</a></td>
+                    </tr>
+                    <tr>
+                        <td>Minneapolis</td>
+                        <td><a href='/assets/work/academic_dean.pdf' target='blank'>Academic Dean 3-5</a></td>
+                        <td><a href='/assets/work/leadership_application.pdf' target='blank'>Apply now</a></td>
+                    </tr>
+                    <tr>
+                        <td>Minneapolis</td>
+                        <td><a href='/assets/work/senior_ops_manager.pdf' target='blank'>Senior Ops Manager</a></td>
+                        <td><a href='/assets/work/leadership_application.pdf' target='blank'>Apply now</a></td>
+                    </tr>
+                    <tr>
+                        <td>Minneapolis</td>
+                        <td><a href='/assets/work/reading_specialist.pdf' target='blank'>Reading Specialist</a></td>
+                        <td><a href='/assets/work/leadership_application.pdf' target='blank'>Apply now</a></td>
+                    </tr>
+                    <tr>
+                        <td>Minneapolis</td>
+                        <td><a href='/assets/work/behavior_specialist.pdf' target='blank'>Behavior Specialist</a></td>
+                        <td><a href='/assets/work/leadership_application.pdf' target='blank'>Apply now</a></td>
+                    </tr>
+                    <tr>
+                        <td>Minneapolis</td>
+                        <td><a href='/assets/work/pre_k_teacher.pdf' target='blank'>PK-2 Teachers</a></td>
+                        <td><a href='/assets/work/teaching_application.pdf' target='blank'>Apply now</a></td>
+                    </tr>
+                    <tr>
+                        <td>Minneapolis</td>
+                        <td><a href='/assets/work/teacher.pdf' target='blank'>3-5 Teachers</a></td>
+                        <td><a href='/assets/work/teaching_application.pdf' target='blank'>Apply now</a></td>
+                    </tr>
+                    <tr>
+                        <td>Minneapolis</td>
+                        <td><a href='/assets/work/special_education_teacher.pdf' target='blank'>Special Education Teacher</a></td>
+                        <td><a href='/assets/work/teaching_application.pdf' target='blank'>Apply now</a></td>
+                    </tr>
+                    <tr>
+                        <td>Minneapolis</td>
+                        <td><a href='/assets/work/el_teacher.pdf' target='blank'>EL Teacher</a></td>
+                        <td><a href='/assets/work/teaching_application.pdf' target='blank'>Apply now</a></td>
+                    </tr>
+                    <tr>
+                        <td>Minneapolis</td>
+                        <td><a href='/assets/work/apprentice_teacher.pdf' target='blank'>Apprentice Teacher</a></td>
+                        <td><a href='/assets/work/teaching_application.pdf' target='blank'>Apply now</a></td>
+                    </tr>
+                    <tr>
+                        <td>Minneapolis</td>
+                        <td><a href='/assets/work/pre_k_assistant.pdf' target='blank'>Pre-K Assistant Teacher</a></td>
+                        <td><a href='/assets/work/teaching_application.pdf' target='blank'>Apply now</a></td>
+                    </tr>
+                    <tr>
+                        <td>St. Paul</td>
+                        <td><a href='/assets/work/behavior_specialist.pdf' target='blank'>Behavior Specialist</a></td>
+                        <td><a href='/assets/work/leadership_application.pdf' target='blank'>Apply now</a></td>
+                    </tr>
+                    <tr>
+                        <td>St. Paul</td>
+                        <td><a href='/assets/work/pre_k_teacher.pdf' target='blank'>PK-2 Teachers</a></td>
+                        <td><a href='/assets/work/teaching_application.pdf' target='blank'>Apply now</a></td>
+                    </tr>
+                    <tr>
+                        <td>St. Paul</td>
+                        <td><a href='/assets/work/teacher.pdf' target='blank'>3-5 Teachers</a></td>
+                        <td><a href='/assets/work/teaching_application.pdf' target='blank'>Apply now</a></td>
+                    </tr>
+                    <tr>
+                        <td>St. Paul</td>
+                        <td><a href='/assets/work/special_education_teacher.pdf' target='blank'>Special Education Teacher</a></td>
+                        <td><a href='/assets/work/teaching_application.pdf' target='blank'>Apply now</a></td>
+                    </tr>
+                    <tr>
+                        <td>St. Paul</td>
+                        <td><a href='/assets/work/el_teacher.pdf' target='blank'>EL Teacher</a></td>
+                        <td><a href='/assets/work/teaching_application.pdf' target='blank'>Apply now</a></td>
+                    </tr>
+                    <tr>
+                        <td>St. Paul</td>
+                        <td><a href='/assets/work/apprentice_teacher.pdf' target='blank'>Apprentice Teacher</a></td>
+                        <td><a href='/assets/work/teaching_application.pdf' target='blank'>Apply now</a></td>
+                    </tr>
+                    <tr>
+                        <td>St. Paul</td>
+                        <td><a href='/assets/work/pre_k_assistant.pdf' target='blank'>Pre-K Assistant Teacher</a></td>
+                        <td><a href='/assets/work/teaching_application.pdf' target='blank'>Apply now</a></td>
+                    </tr>
+                    <tr>
+                        <td>Network</td>
+                        <td><a href='/assets/work/vp_operations_compliance.pdf' target='blank'>VP of Operations and Compliance</a></td>
+                        <td><a href='/assets/work/leadership_application.pdf' target='blank'>Apply now</a></td>
+                    </tr>
+                </tbody>
+                </table>
                 <p>Please direct questions and completed applications to Liz Ferguson.</p>
                 <p>
                     <b>Liz Ferguson</b>
