--- a/get_involved/work_at_prodeo.html
+++ b/get_involved/work_at_prodeo.html
@@ -14,7 +14,7 @@ layout: default
             <div class='content'>
                 <h2>Work at Prodeo</h2>
                 <p class='lead'>Thank you for your interest in working at Prodeo Academy!</p>
-                <p>We are currently hiring for the following roles:</p>
+                <p>We have opened up the hiring process for the 2018-2019 school year.</p>
                 <table class="table">
                 <thead>
                     <tr>
@@ -120,13 +120,24 @@ layout: default
                         <td><a href='/assets/work/teaching_application.pdf' target='blank'>Apply now</a></td>
                     </tr>
                     <tr>
+                        <td>St. Paul</td>
+                        <td><a href='/assets/work/specials_teacher.pdf' target='blank'>Specials Teacher</a></td>
+                        <td><a href='/assets/work/teaching_application.pdf' target='blank'>Apply now</a></td>
+                    </tr>
+                    <tr>
                         <td>Network</td>
                         <td><a href='/assets/work/vp_operations_compliance.pdf' target='blank'>VP of Operations and Compliance</a></td>
                         <td><a href='/assets/work/leadership_application.pdf' target='blank'>Apply now</a></td>
                     </tr>
                 </tbody>
                 </table>
-                <p>Please direct questions and completed applications to Liz Ferguson.</p>
+                <p>Please direct questions and completed applications for Minneapolis positions to:</p>
+                <p>
+                    <b>Skye Hoekstra</b>
+                    <br>
+                    <a href='mailto:skyehoekstra@prodeoacademy.org'>skyehoekstra@prodeoacademy.org</a>
+                </p>
+                <p>Please direct questions and completed applications for St. Paul positions to:</p>
                 <p>
                     <b>Liz Ferguson</b>
                     <br>
