Update Who We Are

--- a/about/who_we_are.html
+++ b/about/who_we_are.html
@@ -11,21 +11,27 @@ layout: default
                 <!--<p class='center'>
                     <img src='/assets/about/whoweare.jpg'>
                 </p>-->
-                <p class='lead'>Prodeo Academy is a PK-4, free, public charter school in Minneapolis. From the first day of kindergarten, we are preparing our children for college. Prodeo Academy is a rigorous, meaningful education solution in North Minneapolis.</p>
-                <p class='lead2 center'>
-                    Everything we do at Prodeo Academy, both in and out of<br>the classroom, is based on our Five Core Values: PRIDE
+                <p class='lead'>In Latin, Prodeo means "to advance" or "go forward", and at Prodeo Academy, we believe in the growth of the whole person.</p>
+                <p class='lead2'>Prodeo Academy is a network of free, public charter schools aimed at providing families in the Twin Cities metro area with a high-quality education option. In the upcoming 2018-19 school year, our Minneapolis campus will expand to serve scholars in grades PreK to 5th, and our St. Paul campus will open with grades PreK to 1st.</p>
+                <p class='lead2'>From their first day on campus, we are preparing our children for college and the skills necessary to be successful in life. Everything we do at Prodeo Academy, both in and out of the classroom, is based on our Five Core Values:</p>
+                <p class='center lead'>
+                    <b>P.R.I.D.E.</b>
                     <br>
                     <b>Perseverance, Respect, Integrity, Development,</b>
                     and
                     <b>Enthusiasm.</b>
                 </p>
                 <p class='lead2'>
-                    At Prodeo Academy, every student is engaged in learning. We provide individualized instruction for every child. Excellence is our standard, for both students and teachers. At Prodeo Academy we close the achievement gap by using the best practices in education from the top academic schools in the country. Results matter:
-                    <i>we strive to produce results that are among the highest performing schools in the country.</i>
-                    Together with our families, we provide a structure and culture of success.
+                    At Prodeo Academy we provide individualized instruction for every child, and ensure that our scholars are engaged and excited about the learning process. Excellence is our standard, for both students and teachers. At our schools results matter, and this is why we utilize best practices in education from many of the highest performing schools in the country. Together with our families, our goal is to provide a structure and culture of success for our scholars, and to prepare them to "go forward."
                 </p>
                 <iframe allowfullscreen frameborder='0' height='500px' src='//www.youtube.com/embed/QmSOaDtUN74?autoplay=1' width='910px'></iframe>
             </div>
         </div>
     </div>
 </div>
+
+
+From their first day on campus, we are preparing our children for college and the skills necessary to be successful in life. Everything we do at Prodeo Academy, both in and out of the classroom, is based on our Five Core Values:
+
+Perseverance, Respect, Integrity, Development, and Enthusiasm.
+
