--- a/about/staff.html
+++ b/about/staff.html
@@ -35,7 +35,7 @@ layout: default
                             {% include person.html name="Julia Ebbers" role="Classroom Teacher and Grade Team Chair" %}
                             {% include person.html name="Billette Slaughter" role="Educational Assistant" %}
                             {% include person.html name="Kallie Fitzloff" role="Classroom Teacher" %}
-                            {% include person.html name="Meredith Hennegan" role="Educational Assistant" %}
+                            {% include person.html name="Meredith Heneghan" role="Educational Assistant" %}
                         </ul>
                         <ul class='thumbnails'>
                             {% include person.html name="Laura Holtze" role="Educational Assistant" %}
@@ -133,7 +133,6 @@ layout: default
                     <div class='span12'>
                         <ul class='thumbnails'>
                             {% include person.html name="Sean Mayberry" role="Fitness Support" %}
-                            {% include person.html name="Nick Brock" role="Fitness Educational Assistant" %}
                             {% include person.html name="Edward Schneider" role="Music Teacher" %}
                             {% include person.html name="Armani Wade" role="Music Education Assistant" %}
                         </ul>
@@ -166,7 +165,6 @@ layout: default
                         <ul class='thumbnails'>
                             {% include person.html name="Levi Martin" role="Educational Assistant" %}
                             {% include person.html name="Taqwa Dardery" role="Social Worker and Diversity Coordinator" %}
-                            {% include person.html name="Dana Eichhorst" role="General Classroom Teacher" %}
                         </ul>
                     </div>
                 </div>
@@ -178,9 +176,6 @@ layout: default
                             {% include person.html name="Adi Perez" role="Office Manager" %}
                             {% include person.html name="Octavia McLaurin" role="Office Assistant" %}
                             {% include person.html name="LeRoy Russell" role="Custodian" %}
-                        </ul>
-                        <ul class='thumbnails'>
-                            {% include person.html name="Tammy Flores" role="Custodian" %}
                         </ul>
                     </div>
                 </div>
