Add math specialist

--- a/get_involved/work_at_prodeo.html
+++ b/get_involved/work_at_prodeo.html
@@ -48,8 +48,13 @@ layout: default
                     </tr>
                     <tr>
                         <td>Minneapolis</td>
-                        <td><a href="/assets/work/reading_specialist.pdf" target="blank">Reading Specialist</a></td>
-                        <td><a href="/assets/work/leadership_application.pdf" target="blank">Apply now</a></td>
+                        <td><a href='/assets/work/math_specialist.pdf' target='blank'>Math Specialist</a></td>
+                        <td><a href='/assets/work/teaching_application.pdf' target='blank'>Apply now</a></td>
+                    </tr>
+                    <tr>
+                        <td>Minneapolis</td>
+                        <td><a href='/assets/work/reading_specialist.pdf' target='blank'>Reading Specialist</a></td>
+                        <td><a href='/assets/work/leadership_application.pdf' target='blank'>Apply now</a></td>
                     </tr>
                     <tr>
                         <td>Minneapolis</td>
