--- a/events.html
+++ b/events.html
@@ -7,12 +7,26 @@ layout: default
     <div class="row">
         <div class="span12 panel" id="panel-main">
             <div class="content">
-                </div><h2 class="content">Events</h2><div class="content">
-                </div><div class="row-fluid">
-                    </div><div class="span12">Power Up Prodeo: A Fundraising Party for Our Scholars is on Thursday, May 3rd from 5:00-9:00pm. </div><p class="span12"><br></p><p class="span12">This year, it will be held at the Minneapolis Event Center.</p><p class="span12">Join us at 5PM for networking cocktail hour, featuring heavy apps throughout multiple food stations and bars.&nbsp;</p><p class="span12">At 6:30PM, we will have a short 30 minute program, including a video featuring Prodeo teachers. Afterwards, people are welcome to network and mingle again in the bar area.</p><p class="span12">Table Sponsorships are available. For more information, please contact Laura Durden at 612-524-8649. &nbsp;</p><p class="span12">Tickets are $85.00. Visit https://tinyurl.com/powerupprodeo to register!</p><p class="span12">Support Prodeo scholars and be part of closing the achievement gap in Minnesota. </p><p class="span12">We hope to see you there!</p><p class="span12"><br></p><div class="span12">
-                        <img class="pull-right forestry--none" style="width: 400px; float: none;" src="/assets/student_life/calendar.jpg">
-                    </div><div class="row-fluid">
-                </div><div class="content">
+                <h2>Events</h2>
+                <div class="row-fluid">
+                    <div class="span8">
+                        <h3>
+                            Power Up Prodeo
+                            <small>Thursday, May 3rd - 5:00-9:00pm</small>
+                        </h3>
+                        <p>Power Up Prodeo: A Fundraising Party for Our Scholars is on Thursday, May 3rd from 5:00-9:00pm.</p>
+                        <p>This year, it will be held at the Minneapolis Event Center.</p>
+                        <p>Join us at 5PM for networking cocktail hour, featuring heavy apps throughout multiple food stations and bars.</p>
+                        <p>At 6:30PM, we will have a short 30 minute program, including a video featuring Prodeo teachers. Afterwards, people are welcome to network and mingle again in the bar area.</p>
+                        <p>Table Sponsorships are available. For more information, please contact Laura Durden at 612-524-8649.</p>
+                        <p>Tickets are $85.00. Visit <a href="https://tinyurl.com/powerupprodeo" target="blank">https://tinyurl.com/powerupprodeo</a> to register!</p>
+                        <p>Support Prodeo scholars and be part of closing the achievement gap in Minnesota.</p>
+                        <p>We hope to see you there!</p>
+                    </div>
+                    <div class="span4">
+                        <img src="/assets/student_life/calendar.jpg">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
