--- a/get_involved/work_at_prodeo.html
+++ b/get_involved/work_at_prodeo.html
@@ -76,7 +76,9 @@ layout: default
                         <td><a href="/assets/work/teaching_application.pdf" target="blank">Apply now</a></td>
                     </tr>
                     <tr>
-                        <td><br></td><td></td><td></td>
+                        <td>St. Paul</td>
+                        <td><a href="/assets/work/teacher.pdf" target="blank">K-1 Classroom Teacher</a></td>
+                        <td><a href="/assets/work/teaching_application.pdf" target="blank">Apply now</a></td>
                     </tr>
                 </tbody>
                 </table>
