--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,10 @@ layout: default
                         <p>Prodeo Academy- Minneapolis Campus is located at 620 Olson Memorial Highway, Minneapolis, MN 55411. Our entrance is located on the south side of the building parallel to Olson Memorial Highway. Parking is available on the north side of the building - off of 7th Ave North.</p>
                         <iframe frameborder='0' height='400' marginheight='0' marginwidth='0' scrolling='no' src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2821.9725340789932!2d-93.28907898412133!3d44.984869073318904!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b332f3e35a7619%3A0xb0ba7fd7c956b973!2sProdeo+Academy!5e0!3m2!1sen!2sus!4v1502744087775' width='600'></iframe>
                         <br>
+                         <p>Prodeo Academy- St. Paul Campus is located at 170 Rose Avenue West, St. Paul, MN 55117. Our entrance is located on the north side of the building parallel (on Rose Ave). Parking is available on the east side of the building - parking lot can be entered from Rose Avenue.</p>
+                        <iframe frameborder='0' height='400' marginheight='0' marginwidth='0' scrolling='no' src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2822.4036824507825!2d-93.10926748445883!3d44.97610997909822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32aa262e8b3bf%3A0xa65c84f7709e5609!2s170+Rose+Ave+W%2C+St+Paul%2C+MN+55117!5e0!3m2!1sen!2sus!4v1531767019153' width='600'></iframe>
+
+                        <br>
                     </div>
                 </div>
             </div>
