--- a/get_involved/work_at_prodeo.html
+++ b/get_involved/work_at_prodeo.html
@@ -24,6 +24,11 @@ layout: default
                 </thead>
                 <tbody>
                     <tr>
+                        <td>St. Paul</td>
+                       <td><a href="/assets/work/Office_Assistant_Job_Description_071618.pdf" target="blank">Office Assistant</a></td>
+                        <td><a href="/assets/work/Office_Assistant_Application_071618.docx" target="blank">Apply now</a></td>
+                    </tr>
+                        <tr>
                         <td>Minneapolis</td>
                        <td><a href="/assets/work/teacher.pdf" target="blank">PreK-2 Teachers</a></td>
                         <td><a href="/assets/work/teaching_application.pdf" target="blank">Apply now</a></td>
