--- a/about/staff.html
+++ b/about/staff.html
@@ -182,6 +182,8 @@ layout: default
                             {% include person.html name="Laura Durden" role="Advancement Manager" %}
                             {% include person.html name="Mandy Lindstrom" role="Early Childhood Coordinator" %}
                             {% include person.html name="Lahens St. Fleur" role="Student Recruiter" %}
+                             </ul>
+                        <ul class="thumbnails">
                             {% include person.html name="Edwin Cruz" role="Sr. Recruitment Manager" %}
                             {% include person.html name="Anna Wagner" role="Volunteer Coordinator" %}
                         </ul>
