--- a/about/news.html
+++ b/about/news.html
@@ -9,6 +9,25 @@ layout: default
                 <h3>News and Updates</h3>
                 <div class='row-fluid'>
                     <div class='span12'>
+                             <h4>
+                            Back to School Night at Prodeo Academy is happening soon!
+                         </h4>
+                        <p>Start the school year on the right foot by coming to your school's Back to School event! Please see below for important information about these events and please plan to attend the event at your scholar's campus. 
+                        </p><p>
+<b>Prodeo Academy - Minneapolis</b> will host its Back to School Night event on Monday, August 20, 2018, from 3 pm to 6 pm, at the Minneapolis campus (<a href="https://www.google.com/maps/place/620+Olson+Memorial+Hwy,+Minneapolis,+MN+55411/@44.9850194,-93.2887941,17z/data=!3m1!4b1!4m5!3m4!1s0x52b332f3f073d0b7:0x70e6f231ce4f85b0!8m2!3d44.9850194!4d-93.2866054" target="_blank">620 Olson Memorial Hwy., 55411</a>). 
+ </p><p>
+It is important for all families to attend this informational event -- families who are new to Prodeo AND families who are returning to Prodeo -- please plan to come. At Back to School Night, you'll receive information about bus transportation, meet your scholar's teachers and principal, purchase uniforms, and more. Kids are encouraged to come along, too!
+ </p><p>
+Don't forget to bring along your school supplies! Antibacterial hand sanitizer, Clorox disinfecting wipes, student scissors, 5 glue sticks, 3 boxes of Kleenex, Expo markers, crayons. (<a href="https://drive.google.com/drive/u/0/folders/16xD5w6WrzogdJzj0_OdoSCWIgV88V44g" target="_blank">Click here for more information about Back to School Night in Minneapolis</a>.)
+ </p><p>
+                        <b>Prodeo Academy - St. Paul</b> will host its Back to School event on Monday, August 27, 11 am to 8 pm at the St. Paul campus (<a href="https://www.google.com/maps/place/170+Rose+Ave+W,+St+Paul,+MN+55117/@44.97611,-93.1092675,17z/data=!3m1!4b1!4m5!3m4!1s0x52b32aa262e8b3bf:0xa65c84f7709e5609!8m2!3d44.97611!4d-93.1070788" target="_blank">170 Rose Avenue West, 55117</a>). 
+ </p><p>
+Our new St. Paul campus is excited to open its doors to families to share important information about the school year -- please plan to attend! Families will receive information about bus transportation, meet teachers, meet the principal, and see how we've gotten the school ready for the year.
+ </p><p>
+St. Paul families are not being asked to bring in school supplies at this time. 
+ </p><p>
+We look forward to seeing you at Back to School night!</p>
+                      
                        <h4>
                             Prodeo Academy Elects New Board Members
                          </h4>
