--- a/get_involved/work_at_prodeo.html
+++ b/get_involved/work_at_prodeo.html
@@ -22,20 +22,15 @@ layout: default
                         <th scope="col">Apply</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody> 
                     <tr>
                         <td>St. Paul</td>
-                       <td><a href="/assets/work/Office_Assistant_Job_Description_071618.pdf" target="blank">Office Assistant</a></td>
-                        <td><a href="/assets/work/Office_Assistant_Application_071618.docx" target="blank">Apply now</a></td>
-                    </tr>
-                        <tr>
-                        <td>Minneapolis</td>
-                       <td><a href="/assets/work/teacher.pdf" target="blank">PreK-2 Teachers</a></td>
-                        <td><a href="/assets/work/teaching_application.pdf" target="blank">Apply now</a></td>
+                        <td><a href="/assets/work/St_Paul_Educational_Assistant.pdf" target="blank">Educational Assistant</a></td>
+                        <td><a href="/assets/work/St_Paul_EA_Application.pdf" target="blank">Apply now</a></td>
                     </tr>
                     <tr>
                         <td>Minneapolis</td>
-                        <td><a href="/assets/work/special_education_teacher.pdf" target="blank">Special Education Teacher</a></td>
+                        <td><a href="/assets/work/Specials_Teacher_Job_Description_2018-19.pdf" target="blank">Specials Teacher</a></td>
                         <td><a href="/assets/work/teaching_application.pdf" target="blank">Apply now</a></td>
                     </tr>
 
@@ -49,21 +44,13 @@ layout: default
                         <td><a href="/assets/work/pre_k_assistant.pdf" target="blank">Pre-K Assistant Teacher</a></td>
                         <td><a href="/assets/work/teaching_application.pdf" target="blank">Apply now</a></td>
                     </tr>
-                  <tr>
-                        <td>Minneapolis</td>
-                        <td><a href="/assets/work/social_worker.pdf" target="blank">Social Worker</a></td>
-                        <td><a href="/assets/work/teaching_application.pdf" target="blank">Apply now</a></td>
-                    </tr>
+
                   <tr>
                         <td>Minneapolis</td>
                         <td><a href="/assets/work/fed_3_teacher.pdf" target="blank">Special Education-Fed Setting III Teacher</a></td>
                         <td><a href="/assets/work/teaching_application.pdf" target="blank">Apply now</a></td>
                     </tr>
-                  <tr>
-                        <td>St. Paul</td>
-                        <td><a href="/assets/work/specials_teacher.pdf" target="blank">Specials Teacher</a></td>
-                        <td><a href="/assets/work/teaching_application.pdf" target="blank">Apply now</a></td>
-                    </tr>
+
                     </tr>
                 </tbody>
                 </table>
