--- a/student_life/mpls_elementary.html
+++ b/student_life/mpls_elementary.html
@@ -14,14 +14,12 @@ layout: default
                         <a href='/assets/18-19_Calendar_Final_MPLSElementary.pdf'>Download PDF Calendar</a>
                     </small>
                 </h2>
-                <div class='row-fluid'>
-                    <div class='span6'>
+<center>
                         <img src='/assets/student_life/18-19_Calendar_Final_MPLSElementary-1.gif'>
 <br />
                         <img src='/assets/student_life/18-19_Calendar_Final_MPLSElementary-2.gif'>
+                </center>
 
-                    </div>
-                </div>
                 <br>
                 
             </div>
