--- a/student_life/mpls_primary.html
+++ b/student_life/mpls_primary.html
@@ -11,50 +11,17 @@ layout: default
                     School Calendar
                     <small class='pull-right'>
                         <br>
-                        <a href='/assets/calendar_1718.pdf'>Download PDF Calendar</a>
+                        <a href='/assets/18-19_Calendar_Final_MPLSPrimary.pdf'>Download PDF Calendar</a>
                     </small>
                 </h2>
-                <div class='row-fluid'>
-                    <div class='span6'>
-                        <img src='/assets/student_life/calendar/17-08.png'>
-                        <br>
-                        <br>
-                        <img src='/assets/student_life/calendar/17-10.png'>
-                    </div>
-                    <div class='span6'>
-                        <img src='/assets/student_life/calendar/17-09.png'>
-                        <br>
-                        <br>
-                        <img src='/assets/student_life/calendar/17-11.png'>
-                    </div>
-                </div>
+<center>
+                        <img src='/assets/student_life/18-19_Calendar_Final_MPLSPrimary-1.gif'>
+<br />
+                        <img src='/assets/student_life/18-19_Calendar_Final_MPLSPrimary-2.gif'>
+                </center>
+
                 <br>
-                <div class='row-fluid'>
-                    <div class='span6'>
-                        <img src='/assets/student_life/calendar/17-12.png'>
-                        <br>
-                        <br>
-                        <img src='/assets/student_life/calendar/18-02.png'>
-                    </div>
-                    <div class='span6'>
-                        <img src='/assets/student_life/calendar/18-01.png'>
-                        <br>
-                        <br>
-                        <img src='/assets/student_life/calendar/18-03.png'>
-                    </div>
-                </div>
-                <br>
-                <div class='row-fluid'>
-                    <div class='span6'>
-                        <img src='/assets/student_life/calendar/18-04.png'>
-                        <br>
-                        <br>
-                        <img src='/assets/student_life/calendar/18-06.png'>
-                    </div>
-                    <div class='span6'>
-                        <img src='/assets/student_life/calendar/18-05.png'>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </div>
