--- a/student_life/mpls_elementary.html
+++ b/student_life/mpls_elementary.html
@@ -8,7 +8,7 @@ layout: default
         <div class='span12 panel' id='panel-main'>
             <div class='content'>
                 <h2>
-                    School Calendar
+                    School Calendar - Minneapolis Elementary
                     <small class='pull-right'>
                         <br>
                         <a href='/assets/18-19_Calendar_Final_MPLSElementary.pdf'>Download PDF Calendar</a>
