--- a/student_life/stpaul_primary.html
+++ b/student_life/stpaul_primary.html
@@ -8,7 +8,7 @@ layout: default
         <div class='span12 panel' id='panel-main'>
             <div class='content'>
                 <h2>
-                    School Calendar
+                    School Calendar - St. Paul Primary
                     <small class='pull-right'>
                         <br>
                         <a href='/assets/18-19_Calendar_St_Paul_Primary.pdf'>Download PDF Calendar</a>
