--- a/about/staff_minneapolis.html
+++ b/about/staff_minneapolis.html
@@ -110,7 +110,7 @@ layout: default
                     <div class="span12">
                         <ul class="thumbnails">
                             {% include person.html name="Jeff Stensrud" role="Behavior Specialist" %} 
-                            {% include person.html name="Blake Pedersonn" role="Recess Student Supervisor" %}
+                            {% include person.html name="Blake Pederson" role="Recess Student Supervisor" %}
                         </ul>
                     </div>
                 </div>
